--- a/YunWeiPingTai/Views/Home/Index.cshtml
+++ b/YunWeiPingTai/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     Layout = null;
 }
-@inject SignInManager<IdentityUser> SignInManager
 <!DOCTYPE html>
 <html>
 <head>
@@ -26,32 +25,7 @@
                 <a href="#" class="logo">运维平台1.0</a>
                 <!-- 显示/隐藏菜单 -->
                 <a href="javascript:;" class="seraph hideMenu icon-caidan"></a>
-                <!-- 顶级菜单 -->
-                <ul class="layui-nav mobileTopLevelMenus" mobile>
-                    <li class="layui-nav-item" data-menu="contentManagement">
-                        <a href="javascript:;"><i class="seraph icon-caidan"></i><cite>菜单</cite></a>
-                        <dl class="layui-nav-child">
-                            <dd class="layui-this" data-menu="contentManagement"><a href="javascript:;"><i class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>内容管理</cite></a></dd>
-                            <dd data-menu="memberCenter"><a href="javascript:;"><i class="seraph icon-icon10" data-icon="icon-icon10"></i><cite>用户中心</cite></a></dd>
-                            <dd data-menu="systemeSttings"><a href="javascript:;"><i class="layui-icon" data-icon="&#xe620;">&#xe620;</i><cite>系统设置</cite></a></dd>
-                            <dd data-menu="seraphApi"><a href="javascript:;"><i class="layui-icon" data-icon="&#xe705;">&#xe705;</i><cite>使用文档</cite></a></dd>
-                        </dl>
-                    </li>
-                </ul>
-                <ul class="layui-nav topLevelMenus" pc>
-                    <li class="layui-nav-item layui-this" data-menu="contentManagement">
-                        <a href="javascript:;"><i class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>内容管理</cite></a>
-                    </li>
-                    <li class="layui-nav-item" data-menu="memberCenter" pc>
-                        <a href="javascript:;"><i class="seraph icon-icon10" data-icon="icon-icon10"></i><cite>用户中心</cite></a>
-                    </li>
-                    <li class="layui-nav-item" data-menu="systemeSttings" pc>
-                        <a href="javascript:;"><i class="layui-icon" data-icon="&#xe620;">&#xe620;</i><cite>系统设置</cite></a>
-                    </li>
-                    <li class="layui-nav-item" data-menu="seraphApi" pc>
-                        <a href="javascript:;"><i class="layui-icon" data-icon="&#xe705;">&#xe705;</i><cite>使用文档</cite></a>
-                    </li>
-                </ul>
+                
                 <!-- 顶部右侧菜单 -->
                 <ul class="layui-nav top_menu">
                     <li class="layui-nav-item" pc>
@@ -64,11 +38,8 @@
                         <a href="javascript:;">
                             <img src="~/images/face.jpg" class="layui-nav-img userAvatar" width="35" height="35">
                             <cite class="adminName">
-                                @if (SignInManager.IsSignedIn(User))
-                                {
-                                    
-                                }
-                        </cite>
+                                @ViewData["Name"]
+                            </cite>
                     </a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" data-url="page/user/userInfo.html"><i class="seraph icon-ziliao" data-icon="icon-ziliao"></i><cite>个人资料</cite></a></dd>
@@ -86,7 +57,7 @@
     <div class="layui-side layui-bg-black">
         <div class="user-photo">
             <a class="img" title="我的头像"><img src="~/images/face.jpg" class="userAvatar"></a>
-            <p>你好！<span class="userName">LoginUser</span>, 欢迎登录</p>
+            <p>你好！<span class="userName">@ViewData["Name"]</span>, 欢迎登录</p>
         </div>
         <!-- 搜索 -->
         @*
