--- a/YunWeiPingTai/Views/Unit/List.cshtml
+++ b/YunWeiPingTai/Views/Unit/List.cshtml
@@ -1,271 +1,35 @@
-﻿@model UnitDTO[]
-<div class="row">
-    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-4">
-        <h1 class="page-title txt-color-blueDark">
-            <i class="fa fa-table fa-fw "></i>
-            单位管理
-            <span>
-                >
-                单位列表
-            </span>
-        </h1>
-    </div>
-</div>
-<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-
-    <!-- Button trigger modal -->
-    <a href="/Unit/Add" data-toggle="modal" data-target="#remoteModal" class="btn btn-success btn-lg pull-right header-btn ">
-        <i class="fa fa-circle-arrow-up fa-lg"></i>
-        添加单位
-    </a>
-
-    <!-- MODAL PLACE HOLDER -->
-    <div class="modal fade" id="remoteModal" tabindex="-1" role="dialog" aria-labelledby="remoteModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content"></div>
-        </div>
-    </div>
-    <!-- END MODAL -->
-
-</div>
-<!-- widget grid -->
-<section id="widget-grid" class="">
-
-    <!-- row -->
-    <div class="row">
-
-        <!-- NEW WIDGET START -->
-        <article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-            <!-- Widget ID (each widget will need unique ID)-->
-            <div class="jarviswidget jarviswidget-color-darken" id="wid-id-0" data-widget-editbutton="false">
-
-                <header>
-                    <span class="widget-icon">
-                        <i class="fa fa-table"></i>
-                    </span>
-                    <h2>用户列表 </h2>
-
-                </header>
-
-                <!-- widget div-->
-                <div>
-
-                    <!-- widget edit box -->
-                    <div class="jarviswidget-editbox">
-                        <!-- This area used as dropdown edit box -->
-
-                    </div>
-                    <!-- end widget edit box -->
-                    <!-- widget content -->
-                    <div class="widget-body no-padding">
-
-                        <table id="dt_basic" class="table table-striped table-bordered table-hover" width="100%">
-                            <thead>
-                                <tr>
-                                    <th data-class="expand"><i class="fa fa-fw fa-user text-muted hidden-md hidden-sm hidden-xs"></i> 单位名称</th>
-                                    <th data-hide="phone"><i class="fa fa-fw fa-phone text-muted hidden-md hidden-sm hidden-xs"></i> 单位地址</th>
-                                    <th data-hide="phone,tablet"><i class="fa fa-fw fa-envelope txt-color-blue hidden-md hidden-sm hidden-xs"></i> 联系人</th>
-                                    <th data-hide="phone,tablet">办公电话</th>
-                                    <th data-hide="phone,tablet">手机号</th>
-                                    <th>操作</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var unit in Model)
-                                {
-                                    <tr>
-                                        <td>@unit.Name</td>
-                                        <td>@unit.Address</td>
-                                        <td>@unit.LinkMan</td>
-                                       
-                                        <td>@unit.Tel</td>
-                                        <td>@unit.PhoneNum</td>
-                                        <td>
-                                            <a asp-controller="Unit" asp-action="Edit" title="编辑" onclick="edit(@unit.Id)" ><i class="fa fa-lg fa-edit"></i></a>
-
-                                            <a asp-controller="Unit" asp-action="Delete" title="删除" asp-route-id="@unit.Id" data-action="delete" class="text-danger"><i class="fa fa-lg fa-trash-o"></i></a>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-
-                    </div>
-                    <!-- end widget content -->
-
-                </div>
-                <!-- end widget div -->
-
-            </div>
-            <!-- end widget -->
-
-        </article>
-        <!-- WIDGET END -->
-
-    </div>
-
-    <!-- end row -->
-    <!-- end row -->
-
-</section>
-<!-- end widget grid -->
-@section Scripts {
-    <script type="text/javascript">
-
-        /* DO NOT REMOVE : GLOBAL FUNCTIONS!
-	 *
-	 * pageSetUp(); WILL CALL THE FOLLOWING FUNCTIONS
-	 *
-	 * // activate tooltips
-	 * $("[rel=tooltip]").tooltip();
-	 *
-	 * // activate popovers
-	 * $("[rel=popover]").popover();
-	 *
-	 * // activate popovers with hover states
-	 * $("[rel=popover-hover]").popover({ trigger: "hover" });
-	 *
-	 * // activate inline charts
-	 * runAllCharts();
-	 *
-	 * // setup widgets
-	 * setup_widgets_desktop();
-	 *
-	 * // run form elements
-	 * runAllForms();
-	 *
-	 ********************************
-	 *
-	 * pageSetUp() is needed whenever you load a page.
-	 * It initializes and checks for all basic elements of the page
-	 * and makes rendering easier.
-	 *
-	 */
-
-        pageSetUp();
-
-        /*
-         * ALL PAGE RELATED SCRIPTS CAN GO BELOW HERE
-         * eg alert("my home function");
-         *
-         * var pagefunction = function() {
-         *   ...
-         * }
-         * loadScript("/js/plugin/_PLUGIN_NAME_.js", pagefunction);
-         *
-         */
-
-        // PAGE RELATED SCRIPTS
-
-        // pagefunction
-        var pagefunction = function() {
-            //console.log("cleared");
-
-            /* // DOM Position key index //
-
-                l - Length changing (dropdown)
-                f - Filtering input (search)
-                t - The Table! (datatable)
-                i - Information (records)
-                p - Pagination (paging)
-                r - pRocessing
-                < and > - div elements
-                <"#id" and > - div with an id
-                <"class" and > - div with a class
-                <"#id.class" and > - div with an id and class
-
-                Also see: http://legacy.datatables.net/usage/features
-            */
-
-            /* BASIC ;*/
-            var responsiveHelper_dt_basic = undefined;
-            var responsiveHelper_datatable_fixed_column = undefined;
-            var responsiveHelper_datatable_col_reorder = undefined;
-            var responsiveHelper_datatable_tabletools = undefined;
-
-            var breakpointDefinition = {
-                tablet: 1024,
-                phone: 480
-            };
-
-            $('#dt_basic').dataTable({
-                "sDom": "<'dt-toolbar'<'col-xs-12 col-sm-6'f><'col-sm-6 col-xs-12 hidden-xs'l>r>" +
-                    "t" +
-                    "<'dt-toolbar-footer'<'col-sm-6 col-xs-12 hidden-xs'i><'col-xs-12 col-sm-6'p>>",
-                "oLanguage": {
-                    "sSearch": '<span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>',
-                    "sLengthMenu": "每页显示 _MENU_ 条记录",
-                    "sZeroRecords": "对不起，查询不到任何相关数据",
-                    "sInfo": "当前显示 _START_ 到 _END_ 条，共 _TOTAL_条记录",
-                    "sInfoEmtpy": "找不到相关数据",
-                    "sInfoFiltered": "(数据表中共为 _MAX_ 条记录)",
-                    "sProcessing": "正在加载中...",
-
-                    "oPaginate": {
-                        "sFirst": "第一页",
-                        "sPrevious": " 上一页 ",
-                        "sNext": " 下一页 ",
-                        "sLast": " 最后一页 "
-                    }
-                },
-                "autoWidth": true,
-                "preDrawCallback": function() {
-                    // Initialize the responsive datatables helper once.
-                    if (!responsiveHelper_dt_basic) {
-                        responsiveHelper_dt_basic =
-                            new ResponsiveDatatablesHelper($('#dt_basic'), breakpointDefinition);
-                    }
-                },
-                "rowCallback": function(nRow) {
-                    responsiveHelper_dt_basic.createExpandIcon(nRow);
-                },
-                "drawCallback": function(oSettings) {
-                    responsiveHelper_dt_basic.respond();
-                }
-            });
-
-            /* END BASIC */
-
-            // custom toolbar
-            $("div.toolbar")
-                .html(
-                    '<div class="text-right"><img src="/img/logo.png" alt="SmartAdmin" style="width: 111px; margin-top: 3px; margin-right: 10px;"></div>');
-
-            // Apply the filter
-            $("#datatable_fixed_column thead th input[type=text]").on('keyup change',
-                function() {
-
-                    otable
-                        .column($(this).parent().index() + ':visible')
-                        .search(this.value)
-                        .draw();
-
-                });
-            /* END COLUMN FILTER */
-
-
-        };
-
-        // load related plugins
-
-        loadScript("/js/plugin/datatables/jquery.dataTables.min.js",
-            function() {
-                loadScript("/js/plugin/datatables/dataTables.colVis.min.js",
-                    function() {
-                        loadScript("/js/plugin/datatables/dataTables.tableTools.min.js",
-                            function() {
-                                loadScript("/js/plugin/datatables/dataTables.bootstrap.min.js",
-                                    function() {
-                                        loadScript("/js/plugin/datatable-responsive/datatables.responsive.min.js",
-                                            pagefunction);
-                                    });
-                            });
-                    });
-            });
-
-
-    </script>
+﻿@{
+    ViewData["Title"] = "单位管理";
 }
+<form class="layui-form">
+    <blockquote class="layui-elem-quote quoteBox">
+        <form class="layui-form">
+            @Html.AntiForgeryToken()
+            <div class="layui-inline">
+                <div class="layui-input-inline">
+                    <input type="text" class="layui-input searchVal" placeholder="请输入搜索的内容" />
+                </div>
+                <a class="layui-btn search_btn" data-type="reload">搜索</a>
+            </div>
+            <div class="layui-inline">
+                <a class="layui-btn layui-btn-normal addUnit_btn">添加单位</a>
+            </div>
+            <div class="layui-inline">
+                <a class="layui-btn layui-btn-danger layui-btn-normal delAll_btn">批量删除</a>
+            </div>
+        </form>
+    </blockquote>
+    <table id="unitList" lay-filter="unitList"></table>
 
 
+    <!--操作-->
+    <script type="text/html" id="unitListBar">
+        <a class="layui-btn layui-btn-xs layui-btn-normal" lay-event="deviceList">设备</a>
+        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+        <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="del">删除</a>
+    </script>
+</form>
+@section Scripts{
+    <script type="text/javascript" src="~/layui/layui.js"></script>
+    <script type="text/javascript" src="~/js/unitList.js"></script>
+}
