--- a/YunWeiPingTai/Views/Role/Index.cshtml
+++ b/YunWeiPingTai/Views/Role/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="layui-form-item layui-row layui-col-xs12">
         <label class="layui-form-label">角色名称</label>
         <div class="layui-input-block">
-            <input type="text" name="Name" class="layui-input" id="Name" lay-verify="required" placeholder="请输入角色名称">
+            <input type="text" name="Name" class="layui-input" id="Name" lay-verify="required|roleName" placeholder="请输入角色名称">
         </div>
     </div>
     <div class="layui-form-item layui-row layui-col-xs12">
