--- a/YunWeiPingTai/Views/Unit/Index.cshtml
+++ b/YunWeiPingTai/Views/Unit/Index.cshtml
@@ -9,14 +9,14 @@
     <div class="layui-form-item layui-row layui-col-xs12">
         <label class="layui-form-label">名称</label>
         <div class="layui-input-block">
-            <input type="text" name="Name" class="layui-input" id="Name" lay-verify="required|username" autocomplete="off" placeholder="请输入名称">
+            <input type="text" name="Name" class="layui-input" id="Name" lay-verify="required|unitname" autocomplete="off" placeholder="请输入名称">
         </div>
     </div>
 
     <div class="layui-form-item layui-row layui-col-xs12">
         <label class="layui-form-label">地址</label>
         <div class="layui-input-block">
-            <input type="text" name="Address" class="layui-input" id="Address" placeholder="请输入地址" autocomplete="off" />
+            <input type="text" name="Address" class="layui-input" id="Address" placeholder="请输入地址" lay-verify="required" autocomplete="off" />
         </div>
     </div>
     <div class="layui-form-item layui-row layui-col-xs12">
@@ -28,7 +28,7 @@
     <div class="layui-form-item layui-row layui-col-xs12">
         <label class="layui-form-label">联系人</label>
         <div class="layui-input-block">
-            <input type="text" name="LinkMan" class="layui-input" id="LinkMan" placeholder="请输入联系人" autocomplete="off" />
+            <input type="text" name="LinkMan" class="layui-input" id="LinkMan" placeholder="请输入联系人" lay-verify="required" autocomplete="off" />
         </div>
     </div>
     <div class="layui-form-item layui-row layui-col-xs12">
