--- a/YunWeiPingTai/Views/Home/Welcome.cshtml
+++ b/YunWeiPingTai/Views/Home/Welcome.cshtml
@@ -8,7 +8,7 @@
 </blockquote>
 <div class="layui-row layui-col-space10 panel_box">
     <div class="panel layui-col-xs12 layui-col-sm6 layui-col-md4 layui-col-lg2">
-        <a href="javascript:;" data-url="#" target="_blank">
+        <a href="javascript:;" data-url="https://github.com/sundigital-net/ygsmywpt" target="_blank">
             <div class="panel_icon layui-bg-green">
                 <i class="layui-anim seraph icon-good"></i>
             </div>
