--- a/YunWeiPingTai/Views/User/Index.cshtml
+++ b/YunWeiPingTai/Views/User/Index.cshtml
@@ -1,40 +1,54 @@
-﻿@{
+﻿@model RoleDTO[]
+@{
     ViewData["Title"] = "用户管理";
 }
-
 <form class="layui-form " style="width:80%;">
     @Html.AntiForgeryToken()
     @Html.Hidden("Id")
     <div class="layui-form-item layui-row layui-col-xs12">
-        <label class="layui-form-label"></label>
+        <label class="layui-form-label">姓名</label>
         <div class="layui-input-block">
-            <input type="text" name="Name" class="layui-input" id="Name" lay-verify="required" placeholder="请输入角色名称">
+            <input type="text" name="UserName" class="layui-input" id="UserName" autocomplete="off" lay-verify="required|username" placeholder="请输入姓名">
         </div>
     </div>
     <div class="layui-form-item layui-row layui-col-xs12">
-        <label class="layui-form-label">权限分配</label>
+        <label class="layui-form-label">所属角色</label>
         <div class="layui-input-block">
-            <div id="sundigital-auth-tree"></div>
+            <select name="RoleId" id="RoleId" lay-filter="RoleId" lay-verify="required">
+                @foreach (var item in Model)
+                {
+                    <option value="@item.Id">@item.Name</option>
+                }
+            </select>
         </div>
     </div>
-    <div class="layui-form-item layui-form-text layui-col-xs12">
-        <label class="layui-form-label">备注</label>
+    
+    <div class="layui-form-item layui-row layui-col-xs12">
+        <label class="layui-form-label">手机号码</label>
         <div class="layui-input-block">
-            <textarea placeholder="请输入备注信息" name="Remark" class="layui-textarea" id="Remark"></textarea>
+            <input type="text" name="PhoneNum" class="layui-input" id="PhoneNum" placeholder="请输入手机号码" lay-verify="phone|userphone" autocomplete="off" />
         </div>
     </div>
-
+    <div class="layui-form-item layui-row layui-col-xs12">
+        <label class="layui-form-label">邮箱地址</label>
+        <div class="layui-input-block">
+            <input type="text" name="Email" class="layui-input" id="Email" placeholder="请输入邮箱地址" lay-verify="email|useremail" autocomplete="off" />
+        </div>
+    </div>
+    <div class="layui-form-item layui-row layui-col-xs12" pane>
+        <label class="layui-form-label">是否禁用</label>
+        <div class="layui-input-block">
+            <input type="checkbox" name="IsLock" id="IsLock" lay-filter="IsLock" lay-skin="switch" lay-text="是|否" value="1" />
+        </div>
+    </div>
     <div class="layui-form-item layui-row layui-col-xs12">
         <div class="layui-input-block">
-            <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="addRole">确定</button>
+            <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="addManager">确定</button>
             <button type="reset" class="layui-btn layui-btn-sm layui-btn-primary">重置</button>
         </div>
     </div>
 </form>
 @section Scripts{
     <script type="text/javascript" src="~/layui/layui.js"></script>
-    <script type="text/javascript" src="~/js/roleIndex.js?_=@DateTime.Now.ToString("yyyyMMddHHmmss")"></script>
+    <script type="text/javascript" src="~/js/userIndex.js?_=@DateTime.Now.ToString("yyyyMMddHHmmss")"></script>
 }
-
-
-
