--- a/YunWeiPingTai/Views/User/List.cshtml
+++ b/YunWeiPingTai/Views/User/List.cshtml
@@ -1,7 +1,8 @@
 ﻿
-<form class="layui-form">
+
     <blockquote class="layui-elem-quote quoteBox">
         <form class="layui-form">
+            @Html.AntiForgeryToken()
             <div class="layui-inline">
                 <div class="layui-input-inline">
                     <input type="text" class="layui-input searchVal" placeholder="请输入搜索的内容" />
@@ -33,7 +34,7 @@
         <input type="checkbox" name="IsLock" value="{{d.Id}}" lay-filter="IsLock" lay-skin="switch" lay-text="是|否">
         {{#  }}}
     </script>
-</form>
+
 @section Scripts{
     <script type="text/javascript" src="~/layui/layui.js"></script>
     <script type="text/javascript" src="~/js/userList.js"></script>
